2013-12-04  Alessandro <aantonello@paralaxe.com.br>

	* CRect.java (deflatePadding(), deflateMargins()): Two new functions to
	  help working with Android layout constraints.

2013-11-22  Alessandro <aantonello@paralaxe.com.br>

	* AbstractView.java (getGridView(), getSpinner()): Added more two convertion
	  (casting) methods.
	* AbstractView.java (inflate(int,ViewGroup)): Changed how to get the
	  LayoutInflater instance.
	* AbstractView.java (select(int)): Added method to select an item in a View
	  descendant of an AdapterView.
	* AbstractView.java (selected()): Added method to get the index position of
	  the current selected item in a View descendant of an AdapterView.

2013-11-12  Alessandro <aantonello@paralaxe.com.br>

	* CAndroidPagerView.java: Complete rewrote of the class.

2013-11-08  Alessandro <aantonello@paralaxe.com.br>

	* CStringTable.java (Load()): Bug. Was not setting the character code when
	loading the stringtable XML file. Forgot that the default is Latin1.
	* AbstractView.java (level()): Added function to change the image level of
	an ImageView.
	* doxyfile: Configuration updated.

2013-11-04  Alessandro <aantonello@paralaxe.com.br>

	* CAndroidGridView.java: Buggy! Constructors was not calling _internal_init().

2013-11-03  Alessandro <aantonello@paralaxe.com.br>

	* CAndroidApp.java (loadDrawable()): Added function to load a drawable
	from a resource identifier.

2013-11-01  Alessandro <aantonello@paralaxe.com.br>

	* time_t.java (getWeekDayName(), getMonthName(), toString()): These
	functions were updated to get the correct day and month names from the
	'assets' Android directory.

	* CAndroidApp.java (getMessage()): Function changed to use the SFAsset
	class to load error messages correctly.

	* CStringTable.java: Two new functions added.

	* SFAsset.java: New class to work with resources in the 'assets' Android
	directory.

2013-09-13  Alessandro <aantonello@paralaxe.com.br>

	* thread_t.java: Algumas saídas de depuração removidas.
