@@ -1,3 +1,5 @@
-Version 2.4.165
+Version 2.4.166
 
 * strings.java: Updating documentation.
+* CXmlTok.java (LoadStream()): Buggy! Function was not checking for
+  errors on load streams.
